# core-online

./: README.md  core-online.cabal
db/: cores.db
src/: About.hs  AddCore.hs  Core.hs  CoreOnline.hs  GHCCore.hs  Home.hs  Templates.hs  ViewCore.hs
src/Templates/: About.hs  CoreForm.hs  Home.hs  ViewCore.hs
static/: style.css
