name:                core-online
version:             0.1.0.0
synopsis:            Web app version of ghc-core
-- description:         
homepage:            http://github.com/alpmestan/core-online
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alpmestan@gmail.com>
maintainer:          Alp Mestanogullari <alpmestan@gmail.com>
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

data-files:          static/highlight.css,
                     static/style.css      

executable core-online
  main-is:             src/CoreOnline.hs       
  -- other-modules:       
  build-depends:       base >= 4 && < 5, 
                       happstack-server, 
                       bytestring, 
                       blaze-html, 
                       blaze-markup, 
                       text,
                       sqlite-simple,
                       mtl,
                       process,
                       filepath,
                       highlighter
  ghc-options:         -O2 -Wall